--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Kindle Tales | Play-Based Activity Kits for Parent-Child Bonding</title>
     <meta name="description" content="Kindle Tales helps parents and 2-5 year olds bond through simple, offline activity kits. Build meaningful memories together with curated play experiences delivered to your home." />
     <meta name="author" content="Kindle Tales" />
-    <meta name="keywords" content="parent child bonding, activity kits for toddlers, preschool activities, play based learning, screen free activities, family bonding" />
+    <meta name="keywords" content="parent child bonding, activity kits for toddlers (2-5), preschool activities, play based learning, screen free activities, family bonding" />
 
     <meta property="og:title" content="Kindle Tales | Building Memories, Together" />
     <meta property="og:description" content="Simple, offline activity kits designed for meaningful moments between parents and young children ages 2-5." />
